# rofi-xdph

./: LICENSE  README.md  meson.build
src/: locale.cpp  locale.h  main.cpp  windows.cpp  windows.h
